tests/e2e/complex_nested_expression3.error
Error: syntax error in story at line 1, column 1

1|    0 + 1 * 2 - 3 / 4 % 5 == 6 ^ 2 > 7 or 8
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0123: `boolean` can't be compared with `int`
